RESOLVED FIXED13958
REGRESSION: Form select menu in iframe destroys form select menu on page
https://bugs.webkit.org/show_bug.cgi?id=13958
Summary REGRESSION: Form select menu in iframe destroys form select menu on page
Peer Bremer
Reported 2007-05-31 20:31:15 PDT
The page contains an form select element placed inside an iframe, when you select something in this second menu, the first one is no longer working... it works in Safari ;-)
Attachments
Post fake events to the app event queue (2.49 KB, patch)
2007-06-01 00:59 PDT, mitz
adele: review+
mitz
Comment 1 2007-06-01 00:06:52 PDT
When you release the mouse over the popup in the inner frame, the outer frame doesn't get the (fake) mouse up event.
mitz
Comment 2 2007-06-01 00:59:22 PDT
Created attachment 14818 [details] Post fake events to the app event queue
Sam Weinig
Comment 3 2007-06-01 17:05:00 PDT
Landed in r21950.
Note You need to log in before you can comment on or make changes to this bug.