        Reviewed by Adele.

- fix http://bugs.webkit.org/show_bug.cgi?id=13958
          REGRESSION: Form select menu in iframe destroys form select menu on page

        * page/mac/EventHandlerMac.mm:
        (WebCore::EventHandler::sendFakeEventsAfterWidgetTracking): Instead of calling
        the event handler methods directly, post the fake event on the application event
        queue. This ensures that the fake event is handled only after handling of the
        initiating event has ended, and is seen by ancestor frames' event handlers.



Canonical link: https://commits.webkit.org/18294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21950 268f45cc-cd09-0410-ab3c-d52691b4dbfc